# android

./: README.md
ApkUtils/SignAlpha/: AManager.cpp  AManager.h  CMakeLists.txt  LinkedData.cpp  LinkedData.h  StringChunk.cpp  StringChunk.h  Tag.cpp  Tag.h  TagAttribute.cpp  TagAttribute.h  XMLChunk.cpp  XMLChunk.h  XMLInfo.cpp  XMLInfo.h  XString.cpp  XString.h  main.cpp  test.cpp
ApkUtils/SignAlpha/data/: a1.xml  a1_.xml  a1x.xml  a2x.xml  compare.sh
ApkUtils/SignBeta/: AndroidManifest.xml
ApkUtils/SignBeta/res/layout/: main.xml
ApkUtils/SignBeta/src/cc/ameimei/signalpha/: MainActivity.java
SimpleDemo/app/: build.gradle  proguard-rules.pro
SimpleDemo/app/src/main/: AndroidManifest.xml
SimpleDemo/app/src/main/assets/: test.html
SimpleDemo/app/src/main/res/layout/: activity_animation.xml  activity_coverflow.xml  activity_cpu_info.xml  activity_data_binding.xml  activity_glide.xml  activity_main.xml  activity_outter_draw.xml  activity_player.xml  activity_recycler_view.xml  activity_shortcut.xml  activity_vertial_coverflow.xml  activity_webview.xml  item_recycler.xml
SimpleDemo/app/src/main/res/values/: dimens.xml  strings.xml  styles.xml
Workbanch/: AndroidManifest.xml
Workbanch/res/values/: strings.xml
Workbanch/src/org/daniel/android/workbanch/: MainActivity.java
Workbanch/src/org/daniel/android/workbanch/model/: AbsDataProvider.java  DatabaseProvider.java
Workbanch/src/org/daniel/android/workbanch/receiver/: SDCardActionReceiver.java
Workbanch/src/org/daniel/android/workbanch/service/: BitmapCompressService.java  IBitmapCompress.aidl
(+51 files in other folders)
